--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -59,9 +59,10 @@ jobs:
             file: ./dart/coverage/lcov.info
         
         - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+          if: runner.os == 'Linux'
           with:
             path: "./dart/coverage/lcov.info"
-            min_coverage: 75
+            min_coverage: 80
 
   analyze:
     runs-on: ubuntu-latest
