--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -78,6 +78,7 @@ jobs:
             file: ./flutter/coverage/lcov.info
         
         - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+          if: runner.os == 'Linux'
           with:
             path: "./flutter/coverage/lcov.info"
             min_coverage: 90
