--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     name: Build ${{matrix.sdk}} on ${{matrix.os}}
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
+    timeout-minutes: 20
     defaults:
       run:
         working-directory: ./dart
@@ -46,11 +46,14 @@ jobs:
             dart test -p vm --coverage=coverage
             dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
-        - name: Build example
+        - name: Build examples
           run: |
             cd example
             dart pub get
             dart compile exe bin/example.dart
+            cd ..
+            cd example_web
+            webdev build
 
         - uses: codecov/codecov-action@v1
           if: runner.os == 'Linux'
