--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -46,6 +46,9 @@ jobs:
             dart test -p vm --coverage=coverage
             dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
+        - name: Install webdev
+          run: dart pub global activate webdev
+
         - name: Build examples
           run: |
             cd example
