--- a/dart/example_web/pubspec.yaml
+++ b/dart/example_web/pubspec.yaml
@@ -7,14 +7,11 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  sentry: any
+  sentry:
+    path: ../../dart
 
 dev_dependencies:
   build_runner: ^1.11.5
   build_web_compilers: ^2.16.4
-  pedantic: ^1.11.0
+  lints: ^1.0.1
   webdev: ^2.7.4
-
-dependency_overrides:
-  sentry:
-    path: ../
