--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -57,6 +57,7 @@ jobs:
             cd ..
             cd example_web
             dart pub get
+            dart pub get
             dart run webdev build
 
         - uses: codecov/codecov-action@v1
