--- a/.github/workflows/logging.yml
+++ b/.github/workflows/logging.yml
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 20
     defaults:
       run:
-        working-directory: ./sentry-logging
+        working-directory: ./sentry_logging
     strategy:
       fail-fast: false
       matrix:
