--- a/.github/workflows/dio.yml
+++ b/.github/workflows/dio.yml
@@ -31,7 +31,7 @@ jobs:
         - uses: dart-lang/setup-dart@v1
           with:
             sdk: ${{ matrix.sdk }}
-        - uses: actions/checkout@v2
+        - uses: actions/checkout@v3
         # coverage with 'chrome' platform hangs the build
         - name: Test (VM and browser)
           run: |
@@ -41,13 +41,14 @@ jobs:
             dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
 
         - uses: codecov/codecov-action@v2
-          if: runner.os == 'Linux'
+          if: runner.os == 'Linux' && matrix.sdk == 'stable'
           with:
-            name: sentry
-            file: ./dio/coverage/lcov.info
+            name: sentry_dio
+            files: ./dio/coverage/lcov.info
 
-        - uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
-          if: runner.os == 'Linux'
+        # 1.2.1
+        - uses: VeryGoodOpenSource/very_good_coverage@feed99cc060453828a8f12e74b404baace8e4502
+          if: runner.os == 'Linux' && matrix.sdk == 'stable'
           with:
             path: "./dio/coverage/lcov.info"
             min_coverage: 81
@@ -62,7 +63,7 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: stable
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - run: |
           dart pub get
           dart analyze --fatal-infos
@@ -76,7 +77,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: axel-op/dart-package-analyzer@v3
         id: analysis
         with:
