--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -208,6 +208,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       # 1.20.0
+      # To recreate baseline run: cd flutter; detekt -i android -b config/detekt-bl.xml
       - uses: natiginfo/action-detekt-all@74990bda6bfc47977e1e06aae9f47f320e7587ce
         with:
           args: -i flutter --baseline flutter/config/detekt-bl.xml
