--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -27,5 +27,5 @@ jobs:
       name: Cocoa SDK
     secrets:
       # If a custom token is used instead, a CI would be triggered on a created PR.
-      # api_token: ${{ secrets.CI_DEPLOY_KEY }}
-      api_token: ${{ github.token }}
+      api_token: ${{ secrets.CI_DEPLOY_KEY }}
+      # api_token: ${{ github.token }}
