dep update use deploy key
cont. https://github.com/getsentry/sentry-dart/pull/907
_#skip-changelog_

--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -17,8 +17,8 @@ jobs:
       name: Android SDK
     secrets:
       # If a custom token is used instead, a CI would be triggered on a created PR.
-      # api_token: ${{ secrets.CI_DEPLOY_KEY }}
-      api_token: ${{ github.token }}
+      api_token: ${{ secrets.CI_DEPLOY_KEY }}
+      # api_token: ${{ github.token }}
 
   cocoa:
     uses: getsentry/github-workflows/.github/workflows/updater.yml@v1
