--- a/flutter/android/build.gradle
+++ b/flutter/android/build.gradle
@@ -54,6 +54,6 @@ android {
 }
 
 dependencies {
-    api 'io.sentry:sentry-android:6.1.4'
+    api 'io.sentry:sentry-android:v1.7.31_gradle_plugin'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
