--- a/.github/workflows/min_version_test.yml
+++ b/.github/workflows/min_version_test.yml
@@ -21,29 +21,7 @@ jobs:
       # max-parallel: 4
       matrix:
         os: [macos-latest]
-        target: ['ios', 'android', 'web', 'macos', 'linux', 'windows']
-        exclude:
-          - os: ubuntu-latest
-            target: ios
-          - os: ubuntu-latest
-            target: macos
-          - os: ubuntu-latest
-            target: windows
-          - os: windows-latest
-            target: ios
-          - os: windows-latest
-            target: macos
-          - os: windows-latest
-            target: linux
-          # macos-latest is taking hours due to limited resources
-          - os: macos-latest
-            target: android
-          - os: macos-latest
-            target: web
-          - os: macos-latest
-            target: linux
-          - os: macos-latest
-            target: windows
+        target: ['ios', 'android']
 
     steps:
         - uses: actions/checkout@v3
@@ -72,9 +50,6 @@ jobs:
 
         - name: Build ${{ matrix.target }}
           run: |
-            flutter config --enable-windows-desktop
-            flutter config --enable-macos-desktop
-            flutter config --enable-linux-desktop
             cd min_version_test
             TARGET=${{ matrix.target }}
             flutter pub get
