--- a/min_version_test/pubspec.yaml
+++ b/min_version_test/pubspec.yaml
@@ -39,9 +39,9 @@ dev_dependencies:
 
 dependency_overrides:
   sentry:
-    path: dart
+    path: ../dart
   sentry_flutter:
-    path: flutter
+    path: ../flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
