--- a/min_version_test/android/app/src/main/AndroidManifest.xml
+++ b/min_version_test/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.min_version_test">
+    package="com.example.minversiontest">
    <application
-        android:label="min_version_test"
+        android:label="minversiontest"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
