--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   meta: ^1.3.0
   stack_trace: ^1.10.0
   uuid: ^3.0.0
+  intl: ^0.17.0 # TODO remove or vendor it (its a dart.dev lib)
 
 dev_dependencies:
   mockito: ^5.1.0
