--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  sentry: ^6.11.0
+  sentry: 6.11.0
   package_info_plus: ^1.0.0
   meta: ^1.3.0
 
